CY-22: Registrar solicitudcon con validación automatica y reporte